# yuanta_chan

./: .deployment_state_prod.json  .gitignore  BOARD_DEMO_SUMMARY.md  DEPLOYMENT_GUIDE.md  PORTFOLIO_ANALYSIS_INTEGRATION.md  PortfolioNewsTool.md  README.md  agent.py  aws_cdk_validation_report.json  conversation_flow.txt  deploy_with_mcp.py  lambda_hello2.py  output.json  prd.md  pyproject.toml  run_portfolio_news_real.py  test_payload.json
.cursor/: mcp.json
.cursor/rules/: mcp.json
cdk/: app.py  app_portfolio_analysis.py  output.json  portfolio_analysis_stack.py  requirements.txt
cdk/financial-data/: app.py  cdk.json  pyproject.toml
cdk/full-chatbot/: app.py  cdk.json  pyproject.toml
cdk/investment-metrics/: app.py  deploy.py  pyproject.toml  test_payload.json
cdk/shared/: validate_deployment.py
cdk_shared_constructs/: README.md  pyproject.toml
cdk_shared_constructs/cdk_shared_constructs/: __init__.py  bedrock_adapter.py  financial_collector.py  investment_processor.py
flow/: amz-bedrock.md  comparison.md  google-conversational.md  n8n.md  present.html
memory-bank/: activeContext.md  progress.md  projectbrief.md  tasks.md  techContext.md
memory-bank/archive/: archive-chatbot-infrastructure-phase1-20250113.md  archive-sequential-algorithm-implementation-20250113.md
memory-bank/creative/: creative-algorithm-design.md  creative-architecture-design.md  creative-bedrock-integration.md  creative-real-llm-integration.md
memory-bank/reflection/: reflection-chatbot-infrastructure-phase1.md  reflection-sequential-algorithm-implementation.md
src/bedrock_agent/: README.md  agent_config.json  bedrock_adapter.py  chatbot_example.py  deploy_agent.py  example_real_llm_response.py  investment_analyzer.py  investment_tools_schema.json  test_integration.py
src/common/: __init__.py  logger.py  yahoo_finance_client.py
src/examples/: apple_revenue_analysis.py
src/iac/: lambda_config.py
src/lambda_functions/financial_data/: lambda_function.py  yahoo_finance_client.py
src/lambda_functions/investment_metrics/: lambda_function.py
src/lambda_functions/portfolio_analysis/: README.md  __init__.py  lambda_function.py  logger.py  requirements.txt  yahoo_finance_client.py
src/lambda_functions/portfolio_analysis/charset_normalizer-3.4.2.dist-info/: RECORD
src/lambda_functions/portfolio_analysis/database/: customer_database.csv  stock_database.csv
src/lambda_functions/portfolio_news/: README.md  __init__.py  lambda_function.py  logger.py  news_client.py  requirements.txt
src/lambda_functions/ticket_creation/: lambda_function.py  requirements.txt  yahoo_finance_client.py
src/tests/: README.md  test_client_portfolios.py  test_financial_data.py  test_news_client.py  test_portfolio_analysis.py  test_portfolio_news.py  test_portfolio_news_integration.py  test_ticket_creation.py  test_yahoo_finance.py
src/tests/lambda_deployment/: output.txt  pyt.py
test-agent/: agent.py  dummy_lambda.py
