[tool.poetry]
name = "iac"
version = "0.1.0"
description = ""
authors = ["Anak Wannaphaschaiyong <awannaphasch2016@fau.edu>"]
readme = "README.md"
packages = [{include = "iac", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.63"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
