[tool.poetry]
name = "iac"
version = "0.1.0"
description = ""
authors = ["Anak Wannaphaschaiyong <awannaphasch2016@fau.edu>"]
readme = "README.md"
packages = [{include = "iac", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.63"
chardet = "^5.2.0"
uv = "^0.7.13"
awslabs-core-mcp-server = "^1.0.1"
awslabs-aws-documentation-mcp-server = "^1.0.2"
awslabs-lambda-tool-mcp-server = "^2.0.2"
awslabs-cloudwatch-logs-mcp-server = "^0.0.2"
awslabs-aws-serverless-mcp-server = "^0.1.4"
python-dotenv = "^1.1.0"
awslabs-cdk-mcp-server = "^1.0.2"
boto3 = "^1.38.36"
aws-cdk-lib = "^2.201.0"
constructs = "^10.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
